fix: align footer titles in one line, keep contact centered

--- a/css/style.css
+++ b/css/style.css
@@ -726,14 +726,9 @@ body.menu-open .logo-link {
     }
 
     .footer-contact {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer-contact .footer-list {
-        align-items: flex-start;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .footer-nav {
